--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h2>最新动态</h2>
-            <p>作业太多了，c语言还没及格</p>
+            <p>黑色星期三，太多作业了，课也好多。网站创建时间2024.11.20</p>
         </section>
     </main>
     <footer>
